/*
 * $Id: ChangeLog,v 1.3623 2004/11/24 18:30:43 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-24 19:49 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/gtcgi/gtcgi.c
  * source/rtl/gtpca/gtpca.c
  * source/rtl/gtstd/gtstd.c
    + Added a dummy gt_ProcessMessages().
  * source/rtl/gtwvt/gtwvt.c
    + Added reference of gt_ProcessMessages() in gt_funcs.

2004-11-24 19:30 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/rtl/gtcrs/gtcrs.c
    * added definition for K_SH_BS
    * added some key definitions for gnome-terminal and teraterm
  * source/rtl/gtwvt/gtwvt.c
    * added definition of gt_ProcessMessages

2004-11-24 10:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/ct/settime.c
    ! Fixed waitperiod function. Thanks to Bill Robertson and Rafa Carmona.

2004-11-24 11:28 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    ! fixed ::Hilite() method which was calling ::DispCell() with wrong
      parameters. Removed redundant logic to test if current cell is
      inside ::ColorRect() bounds. This completely fixes news.xharbour.org
      reported slowness when painting a cursor which extends to a full row.

2004-11-23 20:48 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * hrbdll.bc
  * hrbdll.vc
  * hrbdll.wc
    ! Fixed typo in previous commit

2004-11-24 11:20 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/gtwvw.c
    * FlashWindowEx is replaced with FlashWindow to make gtwvw
      work in Win95. Thanks to Peter for recognizing the problem.
    + Added HB_GT_FUNC( gt_ProcessMessages ) to sync with Lorenzo's change.

2004-11-23 20:00 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * hrbdll.bc
  * hrbdll.vc
  * hrbdll.wc