@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3623 2004/11/24 18:30:43 lf_sfnet Exp $
+ * $Id: ChangeLog,v 1.3624 2004/11/25 01:53:26 guerra000 Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-11-24 22:44 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/rtl/gtcrs/gtcrs.c
+  * source/rtl/gtsln/gtsln.c
+    + Added a dummy gt_ProcessMessages().
 
 2004-11-24 19:49 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/rtl/gtcgi/gtcgi.c
